# FileName-Editor

./: .gitignore  CMakeLists.txt  FileRenamer.pro  TODO  main.cpp
include/: FileModel.hpp  FileRenamerController.hpp  MainWindow.hpp
resources/: style.qss
source/controller/: FileRenamerController.cpp
source/model/: FileModel.cpp
source/view/: MainWindow.cpp
